# Piscine-rust

./: Cargo.toml
module_00/: module-00-fr.md
module_00/ex00/: Cargo.toml  main.rs
module_00/ex01/: Cargo.toml  main.rs
module_00/ex02/: Cargo.toml  collatz.rs  print_bytes.rs  yes.rs
module_00/ex03/src/: main.rs
module_00/ex04/: Cargo.toml
module_00/ex04/src/: other.rs  overflow.rs
module_00/ex05/src/: main.rs
module_00/ex06/src/: main.rs
module_00/ex07/: Cargo.toml
module_00/ex07/src/: lib.rs  main.rs
module_01/: module-01-fr.md
module_01/ex00_01/: Cargo.toml
module_01/ex00_01/src/: lib.rs  main.rs
module_01/ex01_01/: Cargo.toml
module_01/ex01_01/src/: main.rs
module_01/ex01_02/: Cargo.toml
module_01/ex01_02/src/: lib.rs  main.rs
module_01/ex01_03/: Cargo.toml
module_01/ex01_03/src/: lib.rs  main.rs
